--- a/app/design/frontend/base/default/template/espaypaymentmethod/form/espaypaymentmethod.phtml
+++ b/app/design/frontend/base/default/template/espaypaymentmethod/form/espaypaymentmethod.phtml
@@ -1,16 +1,15 @@
 <div class="form-list" id="payment_form_<?php echo $this->getMethodCode() ?>" style="display:none;">
+  <?php foreach ($this->getProducts() as $products):?>
   <div>
-    <label><?php echo $this->__('Custom Field One') ?>*</label>
     <span>
-      <input type="text" title="<?php echo $this->__('Custom Field One') ?>" name="payment[custom_field_one]" value="<?php echo $this->htmlEscape($this->getInfoData('custom_field_one')) ?>" />
+        <input type="radio" title="<?php  $products->productName ?>" name="espayProduct" value="<?php echo $products->productCode ?>:<?php echo $products->bankCode ?> " />
     </span>
+    <label><?php echo  $products->productName ?></label>
+
   </div>
-  <div>
-    <label><?php echo $this->__('Custom Field Two') ?>*</label>
-    <span>
-      <input type="text" title="<?php echo $this->__('Custom Field Two') ?>" name="payment[custom_field_two]" value="<?php echo $this->htmlEscape($this->getInfoData('custom_field_two')) ?>" />
-    </span>
-  </div>
+
+  <?php endforeach?>
+
 </div>
 <div>
     <?php echo $this->getMethod()->getConfigData('message');?>
