--- a/app/design/frontend/base/default/template/espaypaymentmethod/redirect.phtml
+++ b/app/design/frontend/base/default/template/espaypaymentmethod/redirect.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <div class="page-title">
-    <h1 style="text-align: center;"><?php echo $this->__('Thank you for your purchase!') ?></h1>
+    <h1 style="text-align: center;"><?php echo $this->__('Your Payment is Proccessed!') ?></h1>
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <h2 style="text-align: center;" class="sub-title"><?php echo $this->__('We are Redirecting You to The Payment Page') ?></h2>
