Change secure.sgo.co.id to kit.espay.id

--- a/app/design/frontend/base/default/template/espaypaymentmethod/form/espaypaymentmethod.phtml
+++ b/app/design/frontend/base/default/template/espaypaymentmethod/form/espaypaymentmethod.phtml
@@ -12,7 +12,7 @@
         </span>
       </td>
       <td style="padding: 2px;">
-        <label><img height='80' width='90' src="https://secure.sgo.co.id/images/products/<?=$products->productCode?>.png"></label>
+        <label><img height='80' width='90' src="https://kit.espay.id/images/products/<?=$products->productCode?>.png"></label>
       </td>
       <td style="padding: 2px 2px 2px 5px;">
           <label style='font-family: Georgia,Times,"Times New Roman",serif;font-style: italic;'> <?php echo $this->__('Payment Using')?> <?=$products->productName?></label>
